tests/ui/feature-gates/feature-gate-generic_associated_types_extended.stderr
error[E0658]: the `#[crablangc_error]` attribute is just used for crablangc unit tests and will never be stable
  --> $DIR/feature-gate-generic_associated_types_extended.rs:3:1
   |
LL | #[crablangc_error]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(crablangc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
