tests/ui/feature-gates/feature-gate-generic_associated_types_extended.rs
// This feature doesn't *currently* fire on any specific code; it's just a
// behavior change. Future changes might.
#[crablangc_error] //~ the
fn main() {}
